samples/_failures_safe/1761044530_4cc5ab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d582b4dc.c: In function ‘bfs’:
./samples/SAFE/__tmp_d582b4dc.c:167:52: error: expected ‘;’ at end of input
  167 |         for (int i = 0; i < current->neighbor_count
      |                                                    ^
      |                                                    ;
./samples/SAFE/__tmp_d582b4dc.c:167:9: error: expected declaration or statement at end of input
  167 |         for (int i = 0; i < current->neighbor_count
      |         ^~~
./samples/SAFE/__tmp_d582b4dc.c:167:9: error: expected declaration or statement at end of input
